added homeAPI for fetching books from online sources

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{pageTitle}}</title>
     <!-- Include any necessary CSS files -->
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/jass.css">
+
 </head>
 <body>
     {{> header}}
@@ -15,8 +17,5 @@
     </div>
 
     {{> footer}}
-
-    <!-- Include any necessary JavaScript files -->
-    <script src="/scripts/server.js"></script>
 </body>
 </html>
