--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,11 +10,14 @@
 
 </head>
 <body>
-    {{> header}}
 
     <div class="container">
         {{{body}}}
     </div>
+    <div>
+    {{> login}}
+    </div>
+
 
     {{> footer}}
 </body>
