--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,14 +7,13 @@
   </head>
   <body>
     <nav id="navbar">
-  <div class="link-container">
-    <a href="/" class="nav-btn">Home</a>
-    <a href="/favorites" class="nav-btn">Favorites</a>
-  </div>
-  <a href="/login" class="nav-btn" id="login-btn">Login</a>
-  <a href="/signUp" class="nav-btn" id="signup-btn">Sign Up</a>
-</nav>
-
+      <div class="link-container">
+        <a href="/" class="nav-btn">Home</a>
+        <a href="/favorites" class="nav-btn">Favorites</a>
+      </div>
+      <a href="/login" class="nav-btn" id="login-btn">Login</a>
+      <a href="/signUp" class="nav-btn" id="signup-btn">Sign-UP</a>
+    </nav>
 
     <div class="main-content">
       <div class="search-container">
