--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,12 +10,20 @@
       <div class="link-container">
         <a href="/" class="nav-btn">Home</a>
         <a href="/favorites" class="nav-btn">Favorites</a>
+        <br />
+        <img src="/images/a-little-life.jpg" height="300px" />
+        <br />
+        <img src="/images/life-after-life.jpg" height="300px" />
+        <br />
+        <img src="/images/the-art-of-fielding.jpg" height="300px" />
+        <br />
       </div>
       <a href="/login" class="nav-btn" id="login-btn">Login</a>
       <a href="/signUp" class="nav-btn" id="signup-btn">Sign-UP</a>
     </nav>
 
     <div class="main-content">
+      <h1 class="book-search-title">📚  Boundless Finds: Discover Your Next Read  📚</h1>
       <div class="search-container">
         <input
           type="text"
