Enhance login/signup forms with CSS and homepage integration

--- a/public/css/login-form.css
+++ b/public/css/login-form.css
@@ -5,8 +5,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 200px;
-  margin-top: 20px;
-  margin-left: 250px;
+  margin-left: 290px;
 }
 
 /* Style form inputs for login form */
@@ -18,13 +17,15 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  font-size: 30px;
+  font-size: 25px;
+  background-color: #343438
 }
 
 /* Style form labels for login form */
 #loginForm label {
   margin-bottom: 5px;
-  font-size: 25px;
+  font-size: 30px;
+  color: #fff
 }
 
 /* Style submit button for login form */
@@ -32,28 +33,21 @@
   width: 140px;
   padding: 10px;
   margin-top: 10px;
-  background-color: #007bff;
+  background-color: #0d56a5;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 25px;
+  font-size: 30px;
 }
 
-/* Style heading for login form */
-#h2-login-form {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #333;
-  font-size: 140px;
-}
 
 /* Style 'or' span for login form */
 #loginForm span {
   display: block;
   text-align: center;
   margin: 10px 0;
-  color: #333;
+  color: #fff;
   font-size: 30px;
 }
 
@@ -62,12 +56,20 @@
   display: block;
   text-align: center;
   margin-bottom: 20px;
-  color: #007bff;
+  color: rgb(51, 162, 255);
   font-size: 40px;
   text-decoration: none;
 }
 
 /* Change color on hover for 'Sign-Up' link */
 #loginForm a:hover {
-  color: #0056b3;
+  color: #063669;
+}
+
+/* Style heading for login form */
+#h2-login-form {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 140px;
+  color: #fff
 }
