--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,8 +18,9 @@
         <img src="/images/the-art-of-fielding.jpg" height="300px" />
         <br />
       </div>
+      <div id="login-form-container"></div>
       <a href="/login" class="nav-btn" id="login-btn">Login</a>
-      <a href="/signUp" class="nav-btn" id="signup-btn">Sign-UP</a>
+      <a href="/signup" class="nav-btn" id="signup-btn">Sign-UP</a>
     </nav>
 
     <div class="main-content">
