--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
   <h2 id="h2-login-form">Login</h2>
   <span>or</span>
   <a href="#">Sign-UP</a>
-  <div>
+  <div class="input-box">
     <label for="email">Email:</label>
     <input
       placeholder="example@example.com"
@@ -12,7 +12,7 @@
       required
     />
   </div>
-  <div>
+  <div class="input-box">
     <label for="password">Password:</label>
     <input
       placeholder="your password goes here.."
