--- a/public/css/signup-form.css
+++ b/public/css/signup-form.css
@@ -5,8 +5,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 200px;
-  margin-top: 20px;
-  margin-left: 250px;
+  margin-left: 290px;
 }
 
 /* Style form inputs for signup form */
@@ -21,14 +20,19 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  font-size: 30px;
-  background-color: #fff;
+  font-size: 25px;
+  background-color: #343438
+}
+
+.input-box {
+  width: 440px;
 }
 
 /* Style form labels for signup form */
 #signupForm label {
   margin-bottom: 5px;
-  font-size: 25px;
+  font-size: 30px;
+  color: #fff
 }
 
 /* Style submit button for signup form */
@@ -36,7 +40,7 @@
   width: 140px;
   padding: 10px;
   margin-top: 10px;
-  background-color: #007bff;
+  background-color: #0d56a5;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -48,6 +52,6 @@
 #signupForm h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: #333;
   font-size: 140px;
+  color: #fff
 }
