--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <form id="signupForm" action="/api/users/signup" method="POST">
   <h2>Sign Up</h2>
-  <div>
-    <label for="username">Username:</label>
+  <div class="input-box">
+    <label for="username">User Name:</label>
     <input
       type="text"
       id="username"
@@ -10,7 +10,7 @@
       required
     />
   </div>
-  <div>
+  <div class="input-box">
     <label for="lastname">Last Name:</label>
     <input
       type="text"
@@ -20,7 +20,7 @@
       required
     />
   </div>
-  <div>
+  <div class="input-box">
     <label for="email">E-mail:</label>
     <input
       type="email"
@@ -30,7 +30,7 @@
       required
     />
   </div>
-  <div>
+  <div class="input-box">
     <label for="password">Password:</label>
     <input
       type="password"
