--- a/public/css/signup-form.css
+++ b/public/css/signup-form.css
@@ -19,7 +19,9 @@
   border-radius: 5px;
   box-sizing: border-box;
   font-size: 25px;
-  background-color: #343438
+  border-color: rgb(100, 93, 83);
+  background-color: rgb(33, 35, 37);
+  color: rgb(232, 230, 227);
 }
 
 .input-box {
@@ -30,7 +32,7 @@
 #signupForm label {
   margin-bottom: 5px;
   font-size: 30px;
-  color: #fff
+  color: rgb(232, 230, 227);
 }
 
 /* Style submit button for signup form */
@@ -39,7 +41,7 @@
   padding: 10px;
   margin-top: 10px;
   background-color: #0d56a5;
-  color: #fff;
+  color: rgb(232, 230, 227);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -51,5 +53,5 @@
   text-align: center;
   margin-bottom: 20px;
   font-size: 140px;
-  color: #fff
+  color: rgb(232, 230, 227);
 }
