--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,6 +6,7 @@
     <!-- Add any additional head content here (e.g., CSS links) -->
   </head>
   <body>
+
     <nav id="navbar">
       <div class="link-container">
         <a href="/" class="nav-btn">Home</a>
@@ -21,7 +22,7 @@
       <div id="login-form-container"></div>
 
       {{#if logged_in}}
-        <button class="nav-btn" id="logout">logout</button>
+        <button class="nav-btn" id="logout-btn">logout</button>
       {{else}}
         <a href="/login" class="nav-btn" id="login-btn">Login</a>
         <a href="/signup" class="nav-btn" id="signup-btn">Sign-UP</a>
@@ -30,7 +31,7 @@
     </nav>
 
     <div class="main-content">
-      <h1 class="book-search-title">📚 Boundless Finds: Discover Your Next Read
+      <h1 class="book-search-title">📚 Boundless Finds: Discover Your <span> Next Read</span> 
         📚</h1>
       <div class="search-container">
         <input
@@ -42,10 +43,7 @@
       </div>
       <div id="book-container">
         <!-- Books will be added here by the JS script -->
-      
-      
       </div>
-    </div>
     <!-- JS Script for Handling API and DOM Manipulation -->
     <script src="./js/homeAPI.js"></script>
     {{#if logged_in}}
