redid the navbar and added hover to the tabs and placed a few sample books at the center of the page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="/css/jass.css" />
     <link rel="stylesheet" href="/css/login-form.css" />
     <link rel="stylesheet" href="/css/signup-form.css" />
+   
+      <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e3s4Wz6iJgD/+ub2oU"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <nav>
@@ -37,6 +44,14 @@
 
     {{#if logged_in}}
       <script src="/js/logout.js"></script>
+     
     {{/if}}
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBud7TlRbs/ic4AwGcFZOxg5DpPt8EgeUIgIwzjWfXQKWA3" crossorigin="anonymous"></script>
+   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFergwnmQpGqJZnOXVF4gEUDy1/H6Uj/ZO5wh7Pt25Z8uawoD6/zZKG" crossorigin="anonymous"></script>
+    <!-- JS Script for Handling API and DOM Manipulation -->
+    <script src="./js/homeAPI.js"></script>
   </body>
 </html>
