--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,25 +26,27 @@ body {
   left: 0;
   width: 250px;
   height: 100vh;
-  background-color: #052546;
+  background-color: #333;
   color: #fff;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 20px;
   z-index: 100;
   justify-content: space-between;
+
 }
 
 .main-content {
   margin-left: 290px;
-  padding: 20px;
+  padding: 50px 0;
   position: relative;
   z-index: 1;
+  flex-direction: row;
 }
 
 .link-container {
   display: flex;
-  flex-direction: column;
+  flex-direction:row;
 }
 
 #login-btn {
@@ -84,7 +86,7 @@ body {
 .nav-btn {
   margin-bottom: 10px;
   padding: 10px 20px;
-  background-color: #0a417d;
+  background-color: #333;
   color: #fff;
   text-decoration: none;
   border-radius: 4px;
@@ -97,7 +99,7 @@ body {
 
 .nav-btn:hover,
 .nav-btn:focus {
-  background-color: #004494;
+  background-color: #052546;
   outline: none;
 }
 
@@ -150,7 +152,7 @@ body {
 
 
 #book-container {
-  display: flex;
+  display: row;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
@@ -160,14 +162,14 @@ body {
 .card {
   width: 300px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   background-color: #fff;
   overflow: hidden;
-  padding: 10px;
+  padding: 20px;
 }
 
 .card img {
@@ -223,4 +225,39 @@ body {
 
 .card p::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.nav-container {
+  background-color: #333;
+  overflow: hidden;
+}
+.nav-container a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.nav-container a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.image-container {
+  display: flex;
+  justify-content:flex-start;
+  gap: 45px;
+  margin-bottom: 20px; 
+}
+
+.image-item {
+  width: 300px;
+  height: auto;
+}
+
+@media screen and (max-width: 790px) {
+  .image-item {
+    width: 100%;
+  }
 }
