--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,24 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Search</title>
     <!-- Add any additional head content here (e.g., CSS links) -->
+  
   </head>
   <body>
-    <nav id="navbar">
-      <div class="link-container">
-        <a href="/" class="nav-btn">Home</a>
-        <a href="/favorites" class="nav-btn">Favorites</a>
-        <br />
-        <img src="/images/a-little-life.jpg" height="300px" />
-        <br />
-        <img src="/images/life-after-life.jpg" height="300px" />
-        <br />
-        <img src="/images/the-art-of-fielding.jpg" height="300px" />
-        <br />
-      </div>
-      <div id="login-form-container"></div>
-      <a href="/login" class="nav-btn" id="login-btn">Login</a>
-      <a href="/signup" class="nav-btn" id="signup-btn">Sign-UP</a>
-    </nav>
+<div class="nav-container">
+      <a href="/" class="nav-btn">Home</a>
+      <a href="/favorites" class="nav-btn">Favorites</a>
+      <a href="/login" class="nav-btn">Login</a>
+      <a href="/signup" class="nav-btn">Sign-Up</a>
+    </div>
 
     <div class="main-content">
       <h1 class="book-search-title">📚  Boundless Finds: Discover Your Next Read  📚</h1>
@@ -36,8 +27,27 @@
       <div id="book-container">
         <!-- Books will be added here by the JS script -->
       </div>
-    </div>
+     <div class="image-container">
+  <img src="/images/a-little-life.jpg" alt="Image 1" class="image-item">
+  <img src="/images/life-after-life.jpg" alt="Image 2" class="image-item">
+  <img src="/images/the-art-of-fielding.jpg" alt="Image 3" class="image-item">
+  <img src="/images/the-night-circus.jpg" alt="Image 4" class="image-item">
+  <img src="/images/there-there.jpg" alt="Image 5" class="image-item">
+  <img src="/images/the-overstory.jpg" alt="Image 6" class="image-item">
 
+</div>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz4fnFO9gybB5IXNxFwWQfE7u8Lj+XJHAxKlXiG/8rsrtpb6PEdzD828Ii"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+      crossorigin="anonymous"
+    ></script>
     <!-- JS Script for Handling API and DOM Manipulation -->
     <script src="./js/homeAPI.js"></script>
   </body>
