created a footer with an input for users to put there email and phone number

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -54,5 +54,12 @@
     {{#if logged_in}}
       <script src="/js/logout.js"></script>
     {{/if}}
+    <footer class="footer"> 
+      <div class="contact-us">
+        <h3>Contact Us</h3>
+        <input type="email" placeholder="Enter your email"/>
+        <input type="tel" placeholder="Enter your phone number"/>
+        </div>
+    </footer>
   </body>
 </html>
