--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,7 @@ body {
   position: relative;
   z-index: 1;
   flex-direction: row;
+  flex: 1;
 }
 
 .link-container {
@@ -290,4 +291,30 @@ body {
   border: 2px solid #ccc;
   transform: scale(1.1);
   box-shadow: 0px 0px 15px rgba(255,255,255,1);
+}
+
+.footer {
+  background-color: rgb(24, 26, 27);
+  padding: 0.5rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+}
+
+.footer .contact-us{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: brown;
+  font-size: 36px;
+  text-decoration: underline;
+  font-family: 'Georgia', serif;
+}
+
+.footer .contact-us input{
+  margin-bottom: 0.5rem;
+  width: 20rem;
 }
