--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,6 +315,20 @@ body {
 }
 
 .footer .contact-us input{
-  margin-bottom: 0.5rem;
+  border-radius: 10px;
+  background-color: rgba(255,255,255,0.3);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 10px rgba(255,255,255,0.3);
+  padding: 0.5rem;
+  color: white;
+  font-size: 1.2rem;
   width: 20rem;
+  border: none;
+  outline: none;
+  margin-bottom: 0.5rem;
+  transition: all 0.2s ease;
+}
+
+.footer .contact-us input:focus{
+  box-shadow: 0 0 20px rgba(255,255,255,0.5);
 }
