--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,34 +126,48 @@ body {
 
 .search-container {
   position: relative;
-  display: block;
+  display: flex;
   margin: 0 auto;
   width: fit-content;
   z-index: 101;
+  justify-content: flex-end;
 }
 
 #search-input {
-  padding-left: 125px;
-  width: 700px;
-  height: 55px;
-  border-radius: 4px;
-  border: 2px solid #007bff;
-  font-size: 22px;
+  border-radius: 10px 0 0 10px;
+  background-color: rgba(255,255,255,0.3);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 10px rgba(255,255,255,0.3);
+  padding: 1.5rem;
+  color: white;
+  font-size: 1.2rem;
+  width: 20rem;
+  border: none;
+  outline: none;
+  margin-bottom: 0.5rem;
+  transition: all 0.2s ease;
 }
 
 #search-button {
   position: absolute;
-  left: 2px;
-  top: 2px;
-  height: calc(100% - 4px);
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height:87%;
   border: none;
-  background-color: rgb(0, 78, 163);
+  background-color: rgba(255,255,255,0.3);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 10px rgba(255,255,255,0.3);
   color: rgb(216, 212, 207);
-  border-radius: 4px 0 0 4px;
+  border-radius: 0 2px 2px 0;
   cursor: pointer;
-  width: 110px;
-  border-radius: 2px;
-  font-size: 22px;
+  width: 60px;
+  padding: 0 10px;
+  cursor: pointer;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #search-input:focus,
