Enhance carousel image transitions for a smoother user experience

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,10 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Search</title>
-    <!-- Add any additional head content here (e.g., CSS links) -->
-  </head>
+
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Book Search</title>
+    </head>
   <body>
 
     <nav id="navbar">
@@ -12,26 +12,25 @@
         <a href="/" class="nav-btn">Home</a>
         <a href="/favorites" class="nav-btn">Favorites</a>
         <br />
-        <img src="/images/a-little-life.jpg" height="300px" />
+        <img id="rotating-image" src="/images/a-little-life.jpg" height="300px" />
         <br />
-        <img src="/images/life-after-life.jpg" height="300px" />
+        <img id="rotating-image1" src="/images/life-after-life.jpg" height="300px" />
         <br />
-        <img src="/images/the-art-of-fielding.jpg" height="300px" />
+        <img id="rotating-image2" src="/images/the-art-of-fielding.jpg" height="300px" />
         <br />
       </div>
       <div id="login-form-container"></div>
-
       {{#if logged_in}}
-        <button class="nav-btn" id="logout-btn">logout</button>
+        <button class="nav-btn" id="logout-btn">Sign out</button>
       {{else}}
         <a href="/login" class="nav-btn" id="login-btn">Login</a>
         <a href="/signup" class="nav-btn" id="signup-btn">Sign-UP</a>
       {{/if}}
-
     </nav>
 
     <div class="main-content">
-      <h1 class="book-search-title">📚 Boundless Finds: Discover Your <span> Next Read</span> 
+      <h1 class="book-search-title">📚 Boundless Finds: Discover Your
+        <span> Next Read</span>
         📚</h1>
       <div class="search-container">
         <input
@@ -41,13 +40,48 @@
         />
         <button id="search-button">Search</button>
       </div>
+
+  <section id="carousel">
+    <div class="image-container">
+        <button id="back" class="nav-btn">&#10094;</button> 
+        <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image visible" style="display: block;">
+        <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+        <img src="/images/the-night-circus.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+        <img src="/images/life-after-life.jpg" alt="Life After Life" class="carousel-image" style="display: none;">
+        <img src="/images/the-overstory.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+        {{!-- <img src="/images/the-underground-railroad.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+        <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image" style="display: none;">
+        <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+        <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+        <img src="/images/the-art-of-fielding.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;"> --}}
+        <button id="next" class="nav-btn">&#10095;</button> 
+
+    <div class="image-container1">
+        <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: block;">
+        <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+        <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+        <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image1" style="display: none;">
+        
+    <div class="image-container2">
+        <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: block;">
+        <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+        <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+        <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+
+    </div>
+    </div>
+  </section>
+
       <div id="book-container">
-        <!-- Books will be added here by the JS script -->
+      <!-- Books will be added here by the JS script -->
       </div>
+
     <!-- JS Script for Handling API and DOM Manipulation -->
     <script src="./js/homeAPI.js"></script>
     {{#if logged_in}}
       <script src="/js/logout.js"></script>
     {{/if}}
+
   </body>
+
 </html>
