--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,20 +1,71 @@
 <div class="homepage">
   <a class="homepage" href="http://localhost:3001/">Homepage</a>
 </div>
-{{#if books.length}}
-  <h2>Favorites</h2>
-
-  {{#each books as |book|}}
-
-    <div id="book-container">
-      <div class="card">
-        <h2>{{book.title}}</h2>
-        <p>{{book.author}}</p>
-        <img src={{book.cover_image}} alt={{book.title}} />
-        <p>{{book.description}}</p>
-      </div>
+<div class="favorites">
+  <h1>Favorites</h1>
+  {{#if books.length}}
+    <div class="book-list">
+      {{#each books}}
+        <div class="book">
+          <h2>{{this.title}}</h2>
+          <img src="{{this.cover_image}}" alt="Cover image">
+          <p>{{this.author}}</p>
+          <p>{{this.description}}</p>
+        </div>
+      {{/each}}
     </div>
-
-  {{/each}}
-
-{{/if}}
+  {{else}}
+    <p>You have no favorite books added.</p>
+  {{/if}}
+</div>
+<div class="favorites">
+  <h1>Favorites</h1>
+  {{#if books.length}}
+    <div class="book-list">
+      {{#each books}}
+        <div class="book">
+          <h2>{{this.title}}</h2>
+          <img src="{{this.cover_image}}" alt="Cover image">
+          <p>{{this.author}}</p>
+          <p>{{this.description}}</p>
+        </div>
+      {{/each}}
+    </div>
+  {{else}}
+    <p>You have no favorite books added.</p>
+  {{/if}}
+</div>
+<div class="favorites">
+  <h1>Favorites</h1>
+  {{#if books.length}}
+    <div class="book-list">
+      {{#each books}}
+        <div class="book">
+          <h2>{{this.title}}</h2>
+          <img src="{{this.cover_image}}" alt="Cover image">
+          <p>{{this.author}}</p>
+          <p>{{this.description}}</p>
+        </div>
+      {{/each}}
+    </div>
+  {{else}}
+    <p>You have no favorite books added.</p>
+  {{/if}}
+</div>
+<div class="favorites">
+  <h1>Favorites</h1>
+  {{#if books.length}}
+    <div class="book-list">
+      {{#each books}}
+        <div class="book">
+          <h2>{{this.title}}</h2>
+          <img src="{{this.cover_image}}" alt="Cover image">
+          <p>{{this.author}}</p>
+          <p>{{this.description}}</p>
+        </div>
+      {{/each}}
+    </div>
+  {{else}}
+    <p>You have no favorite books added.</p>
+  {{/if}}
+</div>
