--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/jass.css" />
     <link rel="stylesheet" href="/css/login-form.css" />
     <link rel="stylesheet" href="/css/signup-form.css" />
-    <link rel="stylesheet" href="/css/newfile.css.css" />
+    <link rel="stylesheet" href="/css/carousel.css" />
   </head>
   <body>
     <nav>
@@ -24,6 +24,7 @@
 
     <div class="container">
       {{{body}}}
+      </div>
     </div>
   </body>
 </html>
