--- a/public/css/login-form.css
+++ b/public/css/login-form.css
@@ -56,7 +56,7 @@
   display: block;
   text-align: center;
   margin-bottom: 20px;
-  color: rgb(51, 162, 255);
+  color: rgb(68, 76, 81);
   font-size: 40px;
   text-decoration: none;
 }
@@ -72,4 +72,17 @@
   margin-bottom: 20px;
   font-size: 140px;
   color: rgb(232, 230, 227);
+  background-color: rgb(33, 35, 37);
+}
+
+@media (max-width: 480px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+nav a {
+  margin:10px 0;
+  
 }
