--- a/public/css/signup-form.css
+++ b/public/css/signup-form.css
@@ -55,3 +55,15 @@
   font-size: 140px;
   color: rgb(232, 230, 227);
 }
+
+@media (max-width: 480px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+nav a {
+  margin:10px 0;
+  
+}
