--- a/public/css/login-form.css
+++ b/public/css/login-form.css
@@ -56,7 +56,7 @@
   display: block;
   text-align: center;
   margin-bottom: 20px;
-  color: rgb(68, 76, 81);
+  color: rgb(36, 39, 41);
   font-size: 40px;
   text-decoration: none;
 }
@@ -73,6 +73,7 @@
   font-size: 140px;
   color: rgb(232, 230, 227);
   background-color: rgb(33, 35, 37);
+  box-shadow: 0px 0px 5px 2px rgba(255,255,255,0.5),0px 0px 10px 2px rgba(255, 255, 255, 0.3), 0px 0px 15px 2px rgba(255, 255, 255, 0.1);
 }
 
 @media (max-width: 480px) {
@@ -85,4 +86,9 @@
 nav a {
   margin:10px 0;
   
+}
+
+.homepage {
+  background-color: rgb(33, 35, 37);
+  box-shadow: 0px 0px 5px 2px rgba(255,255,255,0.5),0px 0px 10px 2px rgba(255, 255, 255, 0.3), 0px 0px 15px 2px rgba(255, 255, 255, 0.1);
 }
