Fixed the favorite

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -49,24 +49,29 @@
         <img src="/images/the-night-circus.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
         <img src="/images/life-after-life.jpg" alt="Life After Life" class="carousel-image" style="display: none;">
         <img src="/images/the-overstory.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        {{!-- <img src="/images/the-underground-railroad.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+        <img src="/images/the-underground-railroad.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
         <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image" style="display: none;">
         <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
         <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        <img src="/images/the-art-of-fielding.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;"> --}}
+        <img src="/images/the-art-of-fielding.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
         <button id="next" class="nav-btn">&#10095;</button> 
 
     <div class="image-container1">
-        <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: block;">
-        <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-        <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-        <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image1" style="display: none;">
-        
+        <img src="/images/images-1.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: block;">
+        <img src="/images/images-2.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+        <img src="/images/images-3.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+
+
+
+
     <div class="image-container2">
-        <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: block;">
-        <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-        <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-        <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+        <img src="/images/images.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: block;">
+        <img src="/images/download-4.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+        <img src="/images/download-5.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+
+
+
+
 
     </div>
     </div>
