Implement delete functionality for favorites across back-end, front-end, and styles

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/login-form.css" />
     <link rel="stylesheet" href="/css/signup-form.css" />
     <link rel="stylesheet" href="/css/carousel.css" />
+    <link rel="stylesheet" href="/css/favorite.css" />
   </head>
   <body>
     <nav>
