--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -2,70 +2,23 @@
   <a class="homepage" href="http://localhost:3001/">Homepage</a>
 </div>
 <div class="favorites">
-  <h1>Favorites</h1>
-  {{#if books.length}}
-    <div class="book-list">
-      {{#each books}}
-        <div class="book">
-          <h2>{{this.title}}</h2>
-          <img src="{{this.cover_image}}" alt="Cover image">
-          <p>{{this.author}}</p>
-          <p>{{this.description}}</p>
-        </div>
-      {{/each}}
-    </div>
-  {{else}}
-    <p>You have no favorite books added.</p>
-  {{/if}}
+  <h1>Favorites</h1> 
+    {{#if books.length}}
+      <div class="book-list">
+        {{#each books}}
+          <div class="book">
+            <h2>{{this.title}}</h2>
+            <img src="{{this.cover_image}}" alt="Cover image" />
+            <p>{{this.author}}</p>
+            <p>{{this.description}}</p>
+            <button class="oneBook" data-book-id="{{this.id}}">Delete</button> 
+          </div>
+        {{/each}}
+      </div>
+    {{else}}
+      <p>You have no favorite books added.</p>
+    {{/if}}
+  </div>
 </div>
-<div class="favorites">
-  <h1>Favorites</h1>
-  {{#if books.length}}
-    <div class="book-list">
-      {{#each books}}
-        <div class="book">
-          <h2>{{this.title}}</h2>
-          <img src="{{this.cover_image}}" alt="Cover image">
-          <p>{{this.author}}</p>
-          <p>{{this.description}}</p>
-        </div>
-      {{/each}}
-    </div>
-  {{else}}
-    <p>You have no favorite books added.</p>
-  {{/if}}
-</div>
-<div class="favorites">
-  <h1>Favorites</h1>
-  {{#if books.length}}
-    <div class="book-list">
-      {{#each books}}
-        <div class="book">
-          <h2>{{this.title}}</h2>
-          <img src="{{this.cover_image}}" alt="Cover image">
-          <p>{{this.author}}</p>
-          <p>{{this.description}}</p>
-        </div>
-      {{/each}}
-    </div>
-  {{else}}
-    <p>You have no favorite books added.</p>
-  {{/if}}
-</div>
-<div class="favorites">
-  <h1>Favorites</h1>
-  {{#if books.length}}
-    <div class="book-list">
-      {{#each books}}
-        <div class="book">
-          <h2>{{this.title}}</h2>
-          <img src="{{this.cover_image}}" alt="Cover image">
-          <p>{{this.author}}</p>
-          <p>{{this.description}}</p>
-        </div>
-      {{/each}}
-    </div>
-  {{else}}
-    <p>You have no favorite books added.</p>
-  {{/if}}
-</div>
+
+<script src="/js/homeAPI.js"></script>
