Add contact form and styling
- Implement contactForm.handlebars for user inquiries
- Add CSS for enhanced form appearance and responsiveness
- Ensure accessibility and usability standards are met

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/signup-form.css" />
     <link rel="stylesheet" href="/css/carousel.css" />
     <link rel="stylesheet" href="/css/favorite.css" />
+    <link rel="stylesheet" href="/css/contactForm.css" />
   </head>
   <body>
     <nav>
