--- a/public/css/signup-form.css
+++ b/public/css/signup-form.css
@@ -55,3 +55,17 @@
   font-size: 140px;
   color: rgb(232, 230, 227);
 }
+
+
+#signup-btn:hover,
+#signup-btn:focus {
+  background-color: #3a5370;
+  outline: none;
+}
+
+#signup-btn {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
