--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,11 +12,11 @@
         <a href="/" class="nav-btn">Home</a>
         <a href="/favorites" class="nav-btn">Favorites</a>
         <br />
-        <img id="rotating-image" src="/images/a-little-life.jpg" height="300px" />
+        <img id="rotating-image" src="/images/a-little-life.jpg" height="273px" />
         <br />
-        <img id="rotating-image1" src="/images/life-after-life.jpg" height="300px" />
+        <img id="rotating-image1" src="/images/life-after-life.jpg" height="273px" />
         <br />
-        <img id="rotating-image2" src="/images/the-art-of-fielding.jpg" height="300px" />
+        <img id="rotating-image2" src="/images/the-art-of-fielding.jpg" height="273px" />
         <br />
       </div>
       <div id="login-form-container"></div>
@@ -25,7 +25,9 @@
       {{else}}
         <a href="/login" class="nav-btn" id="login-btn">Login</a>
         <a href="/signup" class="nav-btn" id="signup-btn">Sign-UP</a>
+        <a href="/contactForm" class="nav-btn" id="contactForm-btn">Contact Us</a>
       {{/if}}
+
     </nav>
 
     <div class="main-content">
@@ -39,41 +41,32 @@
           placeholder="your book title here..."
         />
         <button id="search-button">Search</button>
-      </div>
+    </div>
 
   <section id="carousel">
     <div class="image-container">
-        <button id="back" class="nav-btn">&#10094;</button> 
-        <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image visible" style="display: block;">
-        <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        <img src="/images/the-night-circus.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        <img src="/images/life-after-life.jpg" alt="Life After Life" class="carousel-image" style="display: none;">
-        <img src="/images/the-overstory.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        <img src="/images/the-underground-railroad.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image" style="display: none;">
-        <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        <img src="/images/the-art-of-fielding.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-        <button id="next" class="nav-btn">&#10095;</button> 
-
-    <div class="image-container1">
-        <img src="/images/images-1.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: block;">
-        <img src="/images/images-2.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-        <img src="/images/images-3.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-
-
-
-
-    <div class="image-container2">
-        <img src="/images/images.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: block;">
-        <img src="/images/download-4.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-        <img src="/images/download-5.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-
-
-
-
-
-    </div>
+          <button id="back" class="nav-btn">&#10094;</button> 
+            <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image visible" style="display: block;">
+            <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/the-night-circus.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/life-after-life.jpg" alt="Life After Life" class="carousel-image" style="display: none;">
+            <img src="/images/the-overstory.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/the-underground-railroad.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image" style="display: none;">
+            <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/the-art-of-fielding.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+          <button id="next" class="nav-btn">&#10095;</button> 
+      <div class="image-container1">
+            <img src="/images/images-1.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: block;">
+            <img src="/images/images-2.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/images-3.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+        <div class="image-container2">
+            <img src="/images/images.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: block;">
+            <img src="/images/download-4.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/download-5.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+        </div>
+      </div>
     </div>
   </section>
 
@@ -86,7 +79,5 @@
     {{#if logged_in}}
       <script src="/js/logout.js"></script>
     {{/if}}
-
-  </body>
-
+</body>
 </html>
