--- a/public/css/favorite.css
+++ b/public/css/favorite.css
@@ -2,7 +2,6 @@
   width: 90%;
   display: flex;
   flex-direction: column;
-  background-color: #052546;
   padding: 30px;
   height: auto;
   overflow-y: auto;
@@ -12,6 +11,12 @@
   font-size: 18px;
   color: white;
   border-radius: 15px;
+  cursor: pointer;
+}
+
+h5 {
+  color: #1f1f1f;
+  font-size: large;
 }
 
 .book-list {
@@ -43,7 +48,7 @@
 
 .book img {
   width: 100%;
-  height: auto;
+  height: 400px;
   object-fit: cover;
   margin-bottom: 15px;
   border-radius: 5px;
@@ -54,12 +59,14 @@
   margin: 0;
   padding: 4px 8px;
   text-align: left;
+
 }
 
 .book h2 {
-  font-size: 1.2em;
-  color: #333;
-  margin-bottom: 5px;
+  height: 40px;
+  font-size: 20px;
+  color: #1f1f1f;
+  margin-bottom: 20px;
 }
 
 .book p {
@@ -74,17 +81,19 @@
 }
 
 .oneBook {
-  padding: 8px 16px;
+  margin-top: 20px;
+  padding: 10px 26px;
   background-color: #ff4d4f;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
-  font-size: 14px;
+  font-size: 19px;
   text-align: center;
   display: inline-block;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .oneBook:hover {
