--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,11 +12,11 @@
         <a href="/" class="nav-btn">Home</a>
         <a href="/favorites" class="nav-btn">Favorites</a>
         <br />
-        <img id="rotating-image" src="/images/a-little-life.jpg" height="273px" />
+        <img id="rotating-image" src="/images/24.jpg" height="273px" />
         <br />
-        <img id="rotating-image1" src="/images/life-after-life.jpg" height="273px" />
+        <img id="rotating-image1" src="/images/25.jpg" height="273px" />
         <br />
-        <img id="rotating-image2" src="/images/the-art-of-fielding.jpg" height="273px" />
+        <img id="rotating-image2" src="/images/35.jpg" height="273px" />
         <br />
       </div>
       <div id="login-form-container"></div>
@@ -46,25 +46,59 @@
   <section id="carousel">
     <div class="image-container">
           <button id="back" class="nav-btn">&#10094;</button> 
-            <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image visible" style="display: block;">
-            <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/the-night-circus.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/life-after-life.jpg" alt="Life After Life" class="carousel-image" style="display: none;">
-            <img src="/images/the-overstory.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
-            <img src="/images/the-underground-railroad.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/27.jpg" alt="The Art of Fielding" class="carousel-image" style="display: block;">
             <img src="/images/a-little-life.jpg" alt="A Little Life" class="carousel-image" style="display: none;">
-            <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/24.jpg" alt="The Art of Fielding" class="carousel-image visible" style="display: none;">
+            <img src="/images/all-the-light-we-cannot-see.jpg" alt="The Art of Fielding" class="carousel-image visible" style="display: none;">
             <img src="/images/my-brilliant-friend.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/28.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/the-night-circus.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/the-fault-in-our-stars.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/the-overstory.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/life-after-life.jpg" alt="Life After Life" class="carousel-image" style="display: none;">
+            <img src="/images/the-underground-railroad.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/25.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/there-there.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
+            <img src="/images/26.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
             <img src="/images/the-art-of-fielding.jpg" alt="The Art of Fielding" class="carousel-image" style="display: none;">
           <button id="next" class="nav-btn">&#10095;</button> 
       <div class="image-container1">
-            <img src="/images/images-1.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: block;">
-            <img src="/images/images-2.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
-            <img src="/images/images-3.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/22.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: block;">
+            <img src="/images/10.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/23.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/25.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/29.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/30.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/31.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/1.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/2.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/3.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/4.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/5.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/6.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/7.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/8.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+            <img src="/images/9.jpg" alt="The Art of Fielding" class="carousel-image1" style="display: none;">
+
+
         <div class="image-container2">
-            <img src="/images/images.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: block;">
-            <img src="/images/download-4.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
-            <img src="/images/download-5.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/20.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: block;">
+            <img src="/images/21.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/32.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/33.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/34.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/35.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/11.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/12.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/13.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/14.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/15.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/16.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/17.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/18.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+            <img src="/images/19.jpg" alt="The Art of Fielding" class="carousel-image2" style="display: none;">
+
+
         </div>
       </div>
     </div>
