--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -9,8 +9,10 @@
           <div class="book">
             <h2>{{this.title}}</h2>
             <img src="{{this.cover_image}}" alt="Cover image" />
-            <p>{{this.author}}</p>
+            <div class="card p ">
+            <h5>{{this.author}}</h5>
             <p>{{this.description}}</p>
+            </div>
             <button class="oneBook" data-book-id="{{this.id}}">Delete</button> 
           </div>
         {{/each}}
